[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolero = "0.9"
bolero-generator = "0.9"
creusot-contracts = { path = "/Users/accorell/creusot-experiments/creusot/creusot-contracts" }
